alignment fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,14 +60,12 @@ a {
   background-color: rgb(1, 21, 77);
   display: flex;
   flex-direction: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
   overflow: none;
 }
 .first-left {
-  width: 100%;
   overflow: none;
 }
 .first-right {
@@ -76,6 +74,8 @@ a {
   border-radius: 10px;
   flex-shrink: 0 1 auto;
   overflow: none;
+  margin: 40px;
+  justify-self: flex-start;
 }
 .system {
   width: 300px;
